2007-11-15  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (get_secrets_dialog_response_cb): pop up the CA cert nag dialog on
			GetSecrets calls too

2007-11-15  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/Makefile.am
	  src/wireless-security/eap-method-peap.h
	  src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method.h
	  src/wireless-security/wireless-security.c
	  src/applet.glade
		- Add EAP-PEAP support

2007-11-15  Dan Williams  <dcbw@redhat.com>

	* src/utils/utils.h
	  src/utils/utils.c
		- (utils_fill_one_crypto_object): new function; move fill_one_object()
			here and generalize a bit.  EAP-TLS bits need to use it too.

	* src/applet-dbus-settings.c
		- (fill_one_object): move to utils.c
		- (applet_dbus_settings_connection_fill_certs,get_one_private_key): use
			utils version of fill_one_object()
		- (extract_secrets): remove unnecessary check for empty secrets table

	* src/wireless-security/eap-method-tls.c
		- (fill_connection): make EAP-TLS actually work by sending the private
			key

2007-11-15  Dan Williams  <dcbw@redhat.com>

	* applet-dbus-settings.c
	  applet.c
	  connection-editor/nm-connection-editor.c
	  connection-editor/nm-connection-list.c
	  gconf-helpers/gconf-helpers.c
	  gconf-helpers/gconf-upgrade.c
	  gconf-helpers/gconf-upgrade.h
	  vpn-password-dialog.c
	  vpn-properties/nm-vpn-properties.c
		- Fix for NMSettingConnection 'name' -> 'id' change

2007-11-13  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_show_info_cb, nma_info_dialog_update): handle dialog hiding and
			destruction correctly, and fix hardware address text on second and
			later exposes of the dialog

2007-11-13  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-ttls.c
	  src/wireless-security/eap-method-tls.c
		- (fill_connection): fix leakage of return value from
			gtk_file_chooser_get_filename() which returns an allocated value

2007-11-13  Dan Williams  <dcbw@redhat.com>
